css/main.css
body {
    margin: auto;
    width: 100%;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

h1{
  font-size: 40px;
}

.bg {
  background-color: #aed3e3f5;      /* for about page */
  }

.navBar {
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    position: fixed;
    width: 100%;
    background-color: rgba(147, 201, 224, 0.9) ;
    z-index: 999;
}

.navBar .toggler {
    display: none;
}

.navBrand {
    font-weight: 500;
}

.navBrand a {
  color: rgba(0, 0, 0, 0.596);
  cursor: pointer;
  text-decoration: none;
  font-size: 1.5rem;

}


.navBrand:hover {
  transition: all 0.3s;
  transform: scale(1.05);
}

.navbar-container {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 1500px;
}

.navMenu {
    display: grid;
    grid-template-columns: repeat(5, auto);
    grid-gap: 10px;
    list-style: none;
    text-align: end;
    width: 60vw;
    justify-content: center;
    margin-right: 2rem;
}

.navItem {
    color: rgba(0, 0, 0, 0.596);
    height: 60px;
}

.navUL {
  color: rgba(0, 0, 0, 0.596);
    display: flex;
    align-items: center;
    text-decoration: none;
    padding: 0.5rem 1rem;
    height: 100%;
    font-weight: bold;
}
.navUL:hover {
    border-bottom: 4px solid rgba(0, 0, 0, 0.445);
    transition: all 0.2s ease-out;
}

.selected_tab {
  border-bottom: 4px solid rgba(0, 0, 0, 0.445);
}

.toggler {
    color: rgba(0, 0, 0, 0.596);;
    text-decoration: none;
    display: flex;
    font-weight: bold;
    position: absolute; 
    padding: 0.5rem 1rem;
    height: 100%;
}

.hero {
  background: url("../images/Slider.jpg") center center/cover no-repeat;
  color: rgba(0, 0, 0, 0.596);
  /* text-shadow: 0px 1px 1.5px black; */
  height: 90vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  object-fit: contain;
  margin-bottom: 100px;
}

.heroButton {
  margin-top: 15px;
  background: transparent;
  color: rgba(0, 0, 0, 0.596);
  height: 50px;
  width: 150px;
  border-radius: 2px;
  font-weight: 1000;
  border: 2px solid black;
}

.heroButton:hover {
  transform: scale(1.05);
  background-color: antiquewhite;
  
}

.effect1:hover {
  cursor: pointer;
  background-position: 0 100%;
}

.flex-container {
    display: flex;
    align-items: center;
    justify-content: center;
    /* padding: 50px 50px; */
    
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 20%;
  border-radius: 5px;
  position: relative;
  overflow: hidden;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

#cardContainer {
  padding: 2px 16px;
  max-height: 10px;
}

.card1 {
  background-color: #fff;
  margin-top: 150px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 20%;
  height: 500px;
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  position: relative;
  overflow: hidden;
  align-items: stretch;
}

.card_bg {
  background-color:#90c0e6;
  padding: 10px 20px;
  height:auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

img {
  border-radius: 5px 5px 0 0;
  position: sticky;
  display: flex;
  object-fit: cover;
  transition: all 0.2s linear;
}

img:hover {
  transform: scale(1.1);
  cursor: pointer;
}

.cardArea {
  position: relative;
  display: flex;
  justify-content: space-evenly;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* About Page */

.avatar {
  display: flex;
  vertical-align: middle;
  width: 150px;
  height: 150px;
  border-radius: 50%;
}

.container {
  background-color: #fff;
  max-height: 10px;
  /* padding: 30px 100px; */
}

.containerA {
  background-color: #fff;
  max-height: 50px;
  display: block;
  color: rgba(44, 44, 44, 0.849);
  text-align: center;
}

.containerB {
  margin-top: 40px;
  padding: 20px 20px;
  background-color: #fff;
  max-height: 50px;
  display: block;
  color: rgba(44, 44, 44, 0.849);
  text-align: center;
}

.containerC {
  margin-top: 60px;
  padding: 0px 20px;
  background-color: #fff;
  max-height: 50px;
  display: flex;
  color: rgba(44, 44, 44, 0.849);
  text-align: center;
}

.containerC ul li {
  display: inline-block;
  margin: 20px 25px;
  transform: scale(1.6);
}
.containerC ul li:hover {
  transform: scale(2);
}


/* Responsive design */

@media screen and (max-width: 620px) {
    .navBar li a.toggler {
      position: sticky;
      right: 10px;
      top: 0;
      display: inline-block;
    }
    .navBar li:not(:last-child) {display: none;}
  }

  
@media screen and (max-width: 620px) {
    .navBar.responsive {
      position: fixed;
    }
    .navBar.responsive .toggler {
      position: absolute;
      right: 20px;
      top: 20px;
    }
    .navBrand {
      font-size: large;
      font-weight: 500;
    }
    .navBar.responsive li{
        float: none;
        display: block;
        text-align: left;
    }
    .navMenu {
        display: block;
        padding-right: 10px;
    }

    .effect1 {
      font-size: 30px;
    }

    .cardArea {
      float: none;
      display: block;
      margin-left: 50px;
    }

    .card {
      margin-bottom: 100px;
      width: 90%;
    }

    #cardContainer {
      max-height: 130px;
    }

    .card1 {
      margin-bottom: 20px;
      display: block;
      width: 90%;
    }
  }


  @media screen and (min-width:620px) and (max-width: 1100px) {
    .card1 {
      margin-bottom: 20px;
      display: block;
      width: 40%;
    }

  }
  

